Add synchronization, quota, logs and archive API
