# toc/api/swagger.yaml
@@ -29,6 +29,26 @@ tags:
   externalDocs:
     description: "Find out more about TOC"
     url: "https://github.com/gyk4j/toc"
+- name: "synchronization"
+  description: "For sychronizing backup snapshots latest status"
+  externalDocs:
+    description: "Find out more about TOC"
+    url: "https://github.com/gyk4j/toc"
+- name: "quota"
+  description: "For checking quota limits"
+  externalDocs:
+    description: "Find out more about TOC"
+    url: "https://github.com/gyk4j/toc"
+- name: "log"
+  description: "For exporting server logs"
+  externalDocs:
+    description: "Find out more about TOC"
+    url: "https://github.com/gyk4j/toc"
+- name: "archive"
+  description: "For creating backup data ZIP archives"
+  externalDocs:
+    description: "Find out more about TOC"
+    url: "https://github.com/gyk4j/toc"
 schemes:
 - "http"
 paths:
@@ -142,6 +162,43 @@ paths:
           schema:
             $ref: "#/definitions/ApiResponse"
   /restorations:
+    get:
+      tags:
+      - "restoration"
+      summary: "Query restoration info"
+      description: "Retrieve information and state of all restorations, their backup\
+        \ and snapshots"
+      operationId: "getRestoration"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        "200":
+          description: "Restoration info retrieved"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Restoration"
+        "403":
+          description: "Forbidden from querying restoration info"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "404":
+          description: "Restoration not found"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "405":
+          description: "Bad request"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "500":
+          description: "TOC controller error"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "503":
+          description: "Service unavailable"
+          schema:
+            $ref: "#/definitions/ApiResponse"
     post:
       tags:
       - "restoration"
@@ -193,7 +250,180 @@ paths:
           description: "Gateway timeout. Stepup backup server did not reply."
           schema:
             $ref: "#/definitions/ApiResponse"
+  /restorations/{restorationId}:
+    get:
+      tags:
+      - "restoration"
+      summary: "Find restoration by ID"
+      description: "Query a single restoration"
+      operationId: "getRestorationById"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "restorationId"
+        in: "path"
+        description: "ID of restoration to return"
+        required: true
+        type: "integer"
+        format: "int64"
+        x-exportParamName: "RestorationId"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Restoration"
+        "400":
+          description: "Invalid ID supplied"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "404":
+          description: "Restoration not found"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+  /synchronizations:
+    post:
+      tags:
+      - "synchronization"
+      summary: "Request backup snapshot synchronization between main and stepup controller"
+      description: "Initiates backup snapshot state synchronization due to network\
+        \ disconnection"
+      operationId: "newSynchronization"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        "200":
+          description: "Synchronization started"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "403":
+          description: "Forbidden from starting synchronization"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "404":
+          description: "TOC controller not found"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "405":
+          description: "Bad request"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "500":
+          description: "TOC controller error"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "502":
+          description: "Bad gateway. Backup server error"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "503":
+          description: "Service unavailable on TOC controller"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "504":
+          description: "Gateway timeout. One or more servers did not reply."
+          schema:
+            $ref: "#/definitions/ApiResponse"
+  /quotas:
+    get:
+      tags:
+      - "quota"
+      summary: "Refresh quota info"
+      description: "Retrieve all quotas set"
+      operationId: "getQuota"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        "200":
+          description: "Quotas retrieved"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Quota"
+        "403":
+          description: "Forbidden from querying quota info"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "404":
+          description: "Quota not found"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "405":
+          description: "Bad request"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "500":
+          description: "TOC controller error"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "503":
+          description: "Service unavailable"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+  /logs:
+    get:
+      tags:
+      - "log"
+      summary: "Export logs"
+      description: "Export logs for all servers"
+      operationId: "exportLog"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        "200":
+          description: "Logs exported"
+          schema:
+            $ref: "#/definitions/Log"
+        "403":
+          description: "Forbidden from exporting logs"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "404":
+          description: "Quota not found"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "405":
+          description: "Bad request"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "500":
+          description: "TOC controller error"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "503":
+          description: "Service unavailable"
+          schema:
+            $ref: "#/definitions/ApiResponse"
 definitions:
+  Severity:
+    type: "string"
+    enum:
+    - "error"
+    - "warning"
+    - "info"
+    - "debug"
+    - "trace"
+  Connections:
+    type: "string"
+    enum:
+    - "online"
+    - "offline"
+  Statuses:
+    type: "string"
+    enum:
+    - "queued"
+    - "in-progress"
+    - "completed"
+    - "failed"
+  Servers:
+    type: "string"
+    enum:
+    - "web"
+    - "file"
+    - "db"
+    - "mail"
   ApiResponse:
     type: "object"
     properties:
@@ -238,6 +468,8 @@ definitions:
     example:
       file: "/var/opt/toc/archive/20241231T235959Z-server.tar.gz"
       id: 1
+      status: "completed"
+      complete: true
   Backup:
     type: "object"
     properties:
@@ -264,6 +496,14 @@ definitions:
         format: "int64"
       backup:
         $ref: "#/definitions/Backup"
+      status:
+        type: "string"
+        description: "Restoration Status"
+        enum:
+        - "queued"
+        - "in-progress"
+        - "completed"
+        - "failed"
     xml:
       name: "Restoration"
     example:
@@ -276,10 +516,110 @@ definitions:
         format: "int64"
       backup:
         $ref: "#/definitions/Backup"
+      status:
+        type: "string"
+        description: "Transfer Status"
+        enum:
+        - "queued"
+        - "in-progress"
+        - "completed"
+        - "failed"
     xml:
       name: "Transfer"
     example:
       id: 1
+      status: "failed"
+  Synchronization:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      time:
+        type: "string"
+        format: "date-time"
+      status:
+        type: "string"
+        description: "Synchronization Status"
+        enum:
+        - "queued"
+        - "in-progress"
+        - "completed"
+        - "failed"
+      xml: {}
+      example: {}
+  Quota:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      path:
+        type: "string"
+      soft:
+        type: "integer"
+        format: "int64"
+      hard:
+        type: "integer"
+        format: "int64"
+      xml: {}
+      example: {}
+    example:
+      path: "path"
+      xml: ""
+      id: 0
+      hard: 1
+      soft: 6
+      example: ""
+  Log:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      time:
+        type: "string"
+        format: "date-time"
+      status:
+        type: "string"
+        description: "Archive Status"
+        enum:
+        - "queued"
+        - "in-progress"
+        - "completed"
+        - "failed"
+      url:
+        type: "string"
+      xml: {}
+      example: {}
+    example:
+      xml: ""
+      id: 0
+      time: "2000-01-23T04:56:07.000+00:00"
+      url: "url"
+      status: "queued"
+      example: ""
+  Archive:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      time:
+        type: "string"
+        format: "date-time"
+      status:
+        type: "string"
+        description: "Archive Status"
+        enum:
+        - "queued"
+        - "in-progress"
+        - "completed"
+        - "failed"
+      url:
+        type: "string"
+      xml: {}
+      example: {}
 externalDocs:
   description: "Find out more about TOC"
   url: "https://github.com/gyk4j/toc"
